testando chamada ajax

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
     <div class="app">
         <h1>Welcome</h1>
+        <button id="testeApi"> botao </button>
+        <span id="testeSpan">...</span>
     </div>
 
     <script type="text/javascript" src="cordova.js"></script>
