--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar-fixed-top">
     <a class="navbar-brand" href="#">User Info App</a>
 
     <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,21 @@
         </div>
     </template>
 
+      <div class="container">
+        <div class="form-group">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" id="searchBar">
+            <div class="input-group-append" >
+              <span class="input-group-text">lupa</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
     <h3 id="pageTitle">Users</h3>
+
 
     <div class="app" id="listOfUsers">
 
