inserindo barra de busca

--- a/index.html
+++ b/index.html
@@ -42,11 +42,33 @@
 
 
     <template id="userPillTemplate">
+
+
+
+
+
+
+      <div class="card text-white bg-info mb-3">
+
+          <div class="card-header">
+              <span class="userId">{{:userId}}</span> - <span class="userName">{{:userName}}</span>
+          </div>
+
+          <div class="card-body">
+            <h4 class="card-title"></h4>
+            <p class="card-text"></p>
+          </div>
+      </div>
+
+
+
+
+<!--
         <div class="container">
           <div class="listItem">
             <span class="userId">{{:userId}}</span> - <span class="userName">{{:userName}}</span>
           </div>
-        </div>
+        </div> -->
     </template>
 
       <div class="container">
