inserindo barra de busca

--- a/index.html
+++ b/index.html
@@ -48,27 +48,21 @@
 
 
 
-      <div class="card text-white bg-info mb-3">
+      <div class="card border-info mb-1">
 
           <div class="card-header">
               <span class="userId">{{:userId}}</span> - <span class="userName">{{:userName}}</span>
           </div>
 
-          <div class="card-body">
-            <h4 class="card-title"></h4>
-            <p class="card-text"></p>
+          <div class="card-body text-secondary">
+            <p class="card-text">
+                email: <span class="user-email"></span><br>
+                username: <span class="user-username"></span><br>
+                phone: <span class="user-phone"></span>
+            </p>
+
           </div>
       </div>
-
-
-
-
-<!--
-        <div class="container">
-          <div class="listItem">
-            <span class="userId">{{:userId}}</span> - <span class="userName">{{:userName}}</span>
-          </div>
-        </div> -->
     </template>
 
       <div class="container">
