--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" />
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link href="css/fontawesome-all.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Hello World</title>
 </head>
@@ -21,33 +22,11 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar-fixed-top">
-    <a class="navbar-brand" href="#">User Info App</a>
-
-    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="	glyphicon glyphicon-menu-hamburger">aaa</span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pageTwo.html">Page two</a>
-        </li>
-      </ul>
-
-    </div> -->
+    <a class="navbar-brand" href="#"><i class="fas fa-info-circle"></i> User Info App</a>
   </nav>
 
 
     <template id="userPillTemplate">
-
-
-
-
-
-
       <div class="card border-info mb-1">
 
           <div class="card-header">
@@ -70,7 +49,9 @@
           <div class="input-group mb-3">
             <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" id="searchBar">
             <div class="input-group-append" >
-              <span class="input-group-text">lupa</span>
+              <span class="input-group-text">
+                <i class="fas fa-eye"></i>
+              </span>
             </div>
           </div>
         </div>
@@ -78,16 +59,15 @@
 
 
 
-    <h3 id="pageTitle">Users</h3>
 
 
-    <div class="app" id="listOfUsers">
+    <div class="app container" id="listOfUsers">
+      <h3 id="pageTitle" >Users List</h3>
 
 
 
 
     </div>
-
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
