add icones e paddings

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" />
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link href="css/fontawesome-all.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link href="css/fontawesome-all.min.css" rel="stylesheet">
     <title>Hello World</title>
 </head>
 
@@ -39,6 +39,8 @@
                 username: <span class="user-username"></span><br>
                 phone: <span class="user-phone"></span>
             </p>
+
+            <a href="#"><i class="fas fa-plus"></i> see more </a>
 
           </div>
       </div>
