--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link href="css/fontawesome-all.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
     <title>Hello World</title>
 </head>
 
@@ -22,7 +22,7 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary navbar-fixed-top">
-    <a class="navbar-brand" href="#"><i class="fas fa-info-circle"></i> User Info App</a>
+    <a class="navbar-brand" href="#"><i class="fa fa-info-circle"></i> User Info App</a>
   </nav>
 
 
@@ -40,7 +40,7 @@
                 phone: <span class="user-phone"></span>
             </p>
 
-            <a href="#"><i class="fas fa-plus"></i> see more </a>
+            <a href="#"><i class="fa fa-plus"></i> see more </a>
 
           </div>
       </div>
@@ -52,7 +52,7 @@
             <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" id="searchBar">
             <div class="input-group-append" >
               <span class="input-group-text">
-                <i class="fas fa-eye"></i>
+                <i class="fa fa-search"></i>
               </span>
             </div>
           </div>
